improvement onto navbar animation. Still must fix overflow x issue

--- a/front/src/assets/scss/global.module.scss
+++ b/front/src/assets/scss/global.module.scss
@@ -1,9 +1,11 @@
 @import './_variables.scss';
 
+
+
 .bg{
     width:100vw;
     height:100vh;
-    
+    overflow-x: hidden;
     &__normal{
         @extend .bg;
         background-color: $color-dark;
