--- a/front/src/components/UI/molecules/MenuBurger/MenuBurger.module.scss
+++ b/front/src/components/UI/molecules/MenuBurger/MenuBurger.module.scss
@@ -4,7 +4,7 @@
         padding: 10px;
         display: flex;
         flex-direction: column;
-        z-index:1;
+        z-index:10;
         position: relative;
         cursor: pointer;
 
